# libxcwm

./: .dir-locals.el  .gitignore  Makefile.am  configure.ac  xcwm.pc.in
include/: Makefile.am
include/xcwm/: atoms.h  context.h  event.h  image.h  input.h  keyboard.h  window.h  xcwm.h  xtoq.h
src/: Makefile.am
src/libcompositewm/: Makefile.am  event_loop.c  init.c  input.c  util.c  window.c  xcwm.c  xtoq.c  xtoq_internal.h
src/libxcwm/: Makefile.am  atoms.c  context.c  context_list.c  data.h  event_loop.c  image.c  init.c  input.c  keyboard.c  util.c  window.c  xcwm.c  xcwm_internal.h
src/xtoq/: Makefile.am  XtoqApplication.h  XtoqApplication.m  XtoqController.h  XtoqController.m  XtoqImageRep.h  XtoqImageRep.m  XtoqView.h  XtoqView.m  XtoqWindow.h  XtoqWindow.m  keymap.c  keymap.h  keymap_main.c  main.m
